# NeuralNetworkCPP

./: .gitignore  CMakeLists.txt  README.md  main.cu  mnist_digits.cu  out.txt  pch.cuh
.cache/clangd/index/: ArithmeticSequence.h.261019771F3F9C21.idx  Array.h.5B5240B25FC590D3.idx  ArrayBase.h.6C992B526395FF11.idx  ArrayCwiseBinaryOps.h.5C4262C6C683B983.idx  ArrayCwiseUnaryOps.h.0B88E4B46FFC91BF.idx  ArrayWrapper.h.1B4169C276AB1B36.idx  Assign.h.356482264B383857.idx  AssignEvaluator.h.E36F7015FDFD0236.idx  AssignmentFunctors.h.EB2F4341852E4666.idx  BFloat16.h.9B469958FC61703D.idx  BandMatrix.h.D69504DE845C418D.idx  BinaryFunctors.h.E94325204F0D3C6F.idx  BlasUtil.h.80146F4A3B719FD9.idx  Block.h.AB6A957C43063908.idx  BlockMethods.h.A899AA35D877885B.idx  BooleanRedux.h.D1D4751C2827518D.idx  CommaInitializer.h.90AD4359AF0770DD.idx  CommonCwiseBinaryOps.h.D83CC340B38111D7.idx  CommonCwiseUnaryOps.h.8DF5ACBA1668DAC6.idx  Complex.h.7C60FED1E10DA841.idx  ConditionEstimator.h.866CDC33D6CF323F.idx  ConfigureVectorization.h.9994999E917D5CEE.idx  ConjHelper.h.E32D6F70A65FD020.idx  Constants.h.F5F03FB3F36D7E2D.idx  Core.0ECFC6CB9E68AC52.idx  CoreEvaluators.h.E6BC00F39E3FA8E0.idx  CoreIterators.h.7B6A89C90B0FAD90.idx  CwiseBinaryOp.h.BF1551D8093C32D1.idx  CwiseNullaryOp.h.7B34948EBF330198.idx  CwiseTernaryOp.h.1E21CF8BC6B025BE.idx  CwiseUnaryOp.h.1EF23EEB7F1CF763.idx  CwiseUnaryView.h.D6501D475A588F23.idx  DenseBase.h.BC728663F45DA106.idx  DenseCoeffsBase.h.C01FD900137ECFDE.idx  DenseStorage.h.BB69A3682C494AB9.idx  Diagonal.h.C86EABEA61E6E750.idx  DiagonalMatrix.h.3B107ADDB5FBA18D.idx  DiagonalProduct.h.1A0838A36ACFABEB.idx  DisableStupidWarnings.h.7DD5BEA56FED1C83.idx  Dot.h.1B431D15FF67BF3E.idx  (+94 more)
DataLoaders/: CMakeLists.txt  ImageData.h
NN/: example.cu
NN/Layers/: NNDenseLayer.cu  NNDenseLayer.cuh  NNInputLayer.cu  NNInputLayer.cuh  NNLayer.cuh  layers.cuh
NN/Models/: NNSequentialModel.cu  NNSequentialModel.cuh
NN/Utils/: Logger.cuh
data/: CREDITS.md
